# mining-rights-daily-agent

./: .env.example  .gitignore  CLAUDE.md  DATA_NOTES.md  README.md  RUN.md  docker-compose.yml  mcp-config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/agent-api/: Dockerfile
apps/agent-api/app/: __init__.py  main.py  orchestrator.py
apps/agent-api/tests/: test_orchestrator.py
apps/agent-cli/: package.json
apps/agent-cli/src/: agent-api.test.ts  agent-api.ts  format.test.ts  format.ts  index.ts
apps/web-dashboard/: Dockerfile  index.html  package.json  tsconfig.json
apps/web-dashboard/src/: App.tsx  api.test.ts  api.ts  styles.css
data/fixtures/: news.json  prices.json  resources.json
docs/: interview-notes.md  mcp-acceptance-rules.md
docs/superpowers/plans/: 2026-06-13-configurable-data-providers.md  2026-06-13-live-callable-data-pack.md  2026-06-13-mcp-remediation.md  2026-06-13-mining-rights-daily-agent.md
docs/superpowers/specs/: 2026-06-13-configurable-data-providers-design.md  2026-06-13-live-callable-data-pack-design.md  2026-06-13-mcp-remediation-design.md  2026-06-13-mining-rights-daily-agent-design.md
eval/: run_smoke_eval.py  sample_prompts.json
mcp_servers/: __init__.py
mcp_servers/lme_price/: __init__.py  providers.py  server.py  tools.py
mcp_servers/lme_price/tests/: __init__.py  test_tools.py
mcp_servers/mineral_pdf/: __init__.py  parser.py  providers.py  server.py  tools.py
mcp_servers/mining_news/: __init__.py  providers.py  server.py  tools.py
mcp_servers/tests/: test_mcp_stdio.py
(+10 files in other folders)
